--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,36 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
+.hint {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.wasd-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.key {
+  color: white;
+  font-weight: 600;
+  width: 30px;
+  height: 30px;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.key-gap {
+  width: 30px;
+  height: 30px;
+}
+.space-container {
+  div {
+    width: 94px;
+  }
+}
