--- a/src/style.css
+++ b/src/style.css
@@ -5,23 +5,23 @@ body {
 
 .hint {
   position: absolute;
-  top: 10px;
+  bottom: 10px;
   left: 10px;
   z-index: 10;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 3px;
 }
 .wasd-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 3px;
+  gap: 2px;
 }
 .key {
   color: white;
   font-weight: 600;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   border: 1px solid white;
   display: flex;
   align-items: center;
@@ -29,8 +29,8 @@ body {
   border-radius: 2px;
 }
 .key-gap {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
 }
 .space-container {
   div {
